@@ -1,2 +1,3 @@
+OTHER_OPTIONS = -project mac/Drosera.xcodeproj
 SCRIPTS_PATH = ../Scripts
 include ../../Makefile.shared
