@@ -1,1 +1,2 @@
-include ../../Makefile.Drosera
+SCRIPTS_PATH = ../../Scripts
+include ../../../Makefile.shared
