@@ -1,20 +1,0 @@
-XCODE_OPTIONS = `perl -I../Scripts -Mwebkitdirs -e 'print XcodeOptionString()'` $(ARGS)
-
-all:
-	( xcodebuild $(OTHER_OPTIONS) $(XCODE_OPTIONS) | grep -v setenv && exit $${PIPESTATUS[0]} )
-
-debug d development dev develop: force
-	../Scripts/set-webkit-configuration --debug
-	( xcodebuild $(OTHER_OPTIONS) $(XCODE_OPTIONS) | grep -v setenv && exit $${PIPESTATUS[0]} )
-
-release r deployment dep deploy: force
-	../Scripts/set-webkit-configuration --release
-	( xcodebuild $(OTHER_OPTIONS) $(XCODE_OPTIONS) | grep -v setenv && exit $${PIPESTATUS[0]} )
-
-universal u: force
-	( xcodebuild $(OTHER_OPTIONS) $(XCODE_OPTIONS) 'ARCHS=ppc i386' | grep -v setenv && exit $${PIPESTATUS[0]} )
-
-clean:
-	( xcodebuild -alltargets clean $(XCODE_OPTIONS) | grep -v setenv && exit $${PIPESTATUS[0]} )
-
-force: ;
